syntax = "proto3";

package kvpb;

service KV {
    rpc Get(GetRequest) returns (GetResponse) {}
	rpc Set(SetRequest) returns (SetResponse) {}
    rpc Watch(WatchRequest) returns (stream Event) {}
	rpc Feedback(FeedbackRequest) returns (FeedbackResponse) {}
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

message SetRequest {
	string key = 1;
	string velue = 2;
}

message SetResponse {
}

message WatchRequest {
    string key = 1;
}

message Event {
}

message FeedbackRequest {
	string key = 1;
	bool error = 2;
	string message = 3;
}

message FeedbackResponse {
}

